<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_bacground"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="16dp"
        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">


            <TextView
                android:id="@+id/header_information"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/intro_details"
                android:textColor="@color/special_grey" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/enter_card_number_here"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeWidth="-1dp"
                android:hint="@string/enter_card_number"
                android:layout_marginBottom="10dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomEnd="20dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_card_number"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/scan_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:textAllCaps="false"
                android:text="@string/scan_card"
                android:textStyle="bold"
                android:backgroundTint="@android:color/holo_green_dark"
                app:shapeAppearance="@style/MyApp.Button"
                />

        </LinearLayout>

        <include
            android:id="@+id/progress_bar"
            layout="@layout/progress_dialog"
            android:visibility="gone" />


    </FrameLayout>







</ScrollView>
